--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src='js/model.js'></script>
 <script src='js/util.js'></script>
-<script src='js/userUtil.js'></script>
+<script src='js/apiCalls.js'></script>
 <!-- <script src='js/populate.js'></script> -->
 <script src='js/main.js'></script>
 <script src='js/poll.js'></script>
