removed merge conflicts

--- a/index.html
+++ b/index.html
@@ -31,19 +31,13 @@
 src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src='js/model.js'></script>
 <script src='js/util.js'></script>
-<<<<<<< HEAD
 <script src='js/apiCalls.js'></script>
 <!-- <script src='js/populate.js'></script> -->
-=======
 <script src='js/userUtil.js'></script>
-<script src='js/populate.js'></script>
->>>>>>> afc81c978550663133e1fc3c8f79de7570f1aefb
+<!-- <script src='js/populate.js'></script> -->
 <script src='js/main.js'></script>
 <script src='js/poll.js'></script>
 <!--<script src='js/pollFirebase.js'></script>-->
-<script src='js/util.js'></script>
-<script src='js/userUtil.js'></script>
-<script src='js/model.js'></script>
 <link rel="stylesheet" href="css/croppie.css" />
 <script src="js/croppie.js"></script>
 	<!-- firebase scripts -->
